Implements reverse geocoding.

--- a/Main.storyboard
+++ b/Main.storyboard
@@ -4234,13 +4234,13 @@
     <inferredMetricsTieBreakers>
         <segue reference="PFg-Zs-ynb"/>
         <segue reference="pId-s9-PUV"/>
-        <segue reference="ItH-HP-BNq"/>
-        <segue reference="e9E-5w-t1P"/>
-        <segue reference="tup-4w-Oy0"/>
         <segue reference="zHu-yQ-I5R"/>
         <segue reference="Wlq-vB-X1o"/>
         <segue reference="6Xp-YR-f5Y"/>
         <segue reference="H4y-UD-BIY"/>
+        <segue reference="EZZ-yh-I9A"/>
+        <segue reference="ZWB-wq-JTW"/>
+        <segue reference="tup-4w-Oy0"/>
         <segue reference="gQS-Od-x3H"/>
     </inferredMetricsTieBreakers>
 </document>
